# meteorite

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: ci.yml
meteorite-core/: Cargo.toml
meteorite-core/src/: auth.rs  init.rs  lib.rs  utils.rs
meteorite-ui/: Cargo.toml
meteorite-ui/src/: main.rs  utils.rs  widgets.rs
meteorite-ui/src/screens/: loading.rs  login.rs  mod.rs
src/: auth.rs  main.rs
src/core/: auth.rs  init.rs  mod.rs  utils.rs
src/gui/: mod.rs  widgets.rs
src/gui/screens/: error.rs  loading.rs  login.rs  main.rs  mod.rs
