[package]
name = "meteorite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
keyring-core = "1.0.0"
matrix-sdk = { version = "0.17.0", features = ["sqlite", "e2e-encryption", "automatic-room-key-forwarding", "qrcode", "sso-login"] }
random-string = "1.1.0"
rpassword = "7.4.0"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
webbrowser = "1.2.0"
[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = "1.0.0"
