[package]
name = "meteorite-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
age = "0.12.1"
anyhow = "1.0.102"
directories = "6.0.0"
keyring-core = "1.0.0"
matrix-sdk = { version = "0.18.0", features = [
    "sqlite",
    "e2e-encryption",
    "automatic-room-key-forwarding",
    "qrcode",
    "sso-login",
] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { workspace = true }
toml = "1.1.2"
url = "2.5.8"
webbrowser = "1.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = [
    "crypto-rust",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# TODO: transition to protected in the future?
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
