[package]
name = "meteorite"
version = "0.1.0"
edition = "2024"
authors = ["Paul8711 <contact@paul8711.com>"]
description = "Fast, Secure & Easy-to-use Matrix client in Rust"
license = "AGPL-3.0-only"
repository = "https://github.com/paul8711-code/meteorite"

[dependencies]
meteorite-core = { path = "../meteorite-core" }

eframe = "0.35.0"
egui_extras = { version = "0.35.0", features = ["all_loaders"] }
native-dialog = "0.9.7"
tokio = { workspace = true }
